--- a/.github/actions/cached-dependencies/action.yml
+++ b/.github/actions/cached-dependencies/action.yml
@@ -1,15 +1,21 @@
 name: 'Get and Cache dependencies'
 description: 'Get dependencies and cache them '
+inputs:
+  caching:
+    description: 'whether to cacche dependencies or not'
+    required: false
+    default: false
 runs:
   using: 'composite'
   steps: 
     - name: Cache dependencies
         id: cache
+        if: inputs.caching == 'true'
         uses: actions/cache@v3
         with:
           path: node_modules
           key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
     - name: Install dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
+        if: steps.cache.outputs.cache-hit != 'true' || inputs.caching != 'true'
         run: npm ci
         shell: bash
