--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Loan and cacche dependency
         uses: ./.github/actions/cached-dependencies
+        with: 
+          caching: 'false'
       - name: Lint code
         run: npm run lint
   test:
